--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
        	<reflections.version>0.9.10</reflections.version>
        	<jjwt.version>0.7.0</jjwt.version>
         <nettyall.version>4.1.15.Final</nettyall.version>
+        <spring.session.version>1.3.1.RELEASE</spring.session.version>
 	</properties>
 	
 	<dependencies>
@@ -112,7 +113,22 @@
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
 			<version>${nettyall.version}</version>
-		</dependency>			       																													  															
+		</dependency>
+		<!-- WEBSOCKETS: SPRING SESSION -->
+		 <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+            <version>${spring.session.version}</version>
+            <type>pom</type>
+        </dependency>
+		 <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+        </dependency>             
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>		       																											  															
 	</dependencies>	
 	<build>
 		<plugins>
