--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,54 @@
 			<version>${nettyall.version}</version>
 		</dependency>			       																													  															
 	</dependencies>	
+	<!-- Profiles -->
+	<profiles>
+		<profile>
+			<id>dev</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<env>dev</env>
+			</properties>
+			<build>
+				<resources>		 
+					<resource>
+						<filtering>true</filtering>
+						<directory>src/main/resources</directory>
+						<excludes>
+							<exclude>prod.properties</exclude>	
+							<exclude>dev.properties</exclude>
+							<exclude>static/**</exclude>				
+						</excludes>
+					</resource>
+				</resources>
+			</build>
+		</profile>
+		<profile>
+			<id>prod</id>
+			<properties>
+				<env>prod</env>
+			</properties>			
+			<build>
+				<resources>		 
+					<resource>
+						<filtering>true</filtering>
+						<directory>src/main/resources</directory>
+						<excludes>
+							<exclude>dev.properties</exclude>
+							<exclude>prod.properties</exclude>	
+							<exclude>static/**</exclude>			
+						</excludes>
+					</resource>
+				</resources>
+			</build>
+		</profile>			
+	</profiles>		
 	<build>
+		<filters>
+		    <filter>src/main/resources/${env}.properties</filter>
+		</filters>	
 		<plugins>
 		    <plugin>
 			    <groupId>org.apache.maven.plugins</groupId>
