--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,31 +2,31 @@
 spring.main.banner-mode=off
 
 #Postgres configuration
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url= jdbc:postgresql://192.168.1.37:6937/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.driver-class-name=@spring.datasource.driver-class-name@
+spring.datasource.url= @spring.datasource.url@
+spring.datasource.username=@spring.datasource.username@
+spring.datasource.password=@spring.datasource.password@
+spring.jpa.hibernate.ddl-auto=@spring.jpa.hibernate.ddl-auto@
 
 #Hibernate
-spring.jpa.properties.hibernate.show_sql=false
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.show_sql=@spring.jpa.properties.hibernate.show_sql@
+spring.jpa.properties.hibernate.format_sql=@spring.jpa.properties.hibernate.format_sql@
 
 #HikariCP
 #Don't use if driver supports JDBC4
 #spring.datasource.hikari.connection-test-query=SELECT 1 
 #Time waiting for a conn in the pool
-spring.datasource.hikari.connection-timeout=60000
+spring.datasource.hikari.connection-timeout=@spring.datasource.hikari.connection-timeout@
 # Max including active and idle
-spring.datasource.hikari.maximum-pool-size=30
+spring.datasource.hikari.maximum-pool-size=@spring.datasource.hikari.maximum-pool-size@
 # Min idle connections trying to maintain in the pool
-spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.minimum-idle=@spring.datasource.hikari.minimum-idle@
 # Max lifetime of a connection in the pool
-#spring.datasource.hikari.max-lifetime=1800000 
-spring.datasource.hikari.idle-timeout=120000
+#spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.idle-timeout=@spring.datasource.hikari.idle-timeout@
 
 #RabbitMQ
-spring.rabbitmq.host = 192.168.1.37
-spring.rabbitmq.port = 6934
-spring.rabbitmq.username = guest
-spring.rabbitmq.password = guest
+spring.rabbitmq.host = @spring.rabbitmq.host@
+spring.rabbitmq.stomp.port = @spring.rabbitmq.stomp.port@
+spring.rabbitmq.username = @spring.rabbitmq.username@
+spring.rabbitmq.password = @spring.rabbitmq.password@
